Cli ultimated, many fixes and test adjusted after the changes previously done to the model