@@ -4,10 +4,7 @@ import it.polimi.ingsw.am38.Controller.GameController;
 import it.polimi.ingsw.am38.Controller.LobbyManager;
 import it.polimi.ingsw.am38.Enum.Color;
 import it.polimi.ingsw.am38.Exception.*;
-import it.polimi.ingsw.am38.Model.Cards.GoldCard;
 import it.polimi.ingsw.am38.Model.Cards.PlayableCard;
-import it.polimi.ingsw.am38.Model.Cards.ResourceCard;
-import it.polimi.ingsw.am38.Model.Decks.ResourceDeck;
 import it.polimi.ingsw.am38.Model.Game;
 import it.polimi.ingsw.am38.Model.Player;
 import org.junit.jupiter.api.Test;
@@ -32,10 +29,10 @@ class GameControllerTest {
 
         g.gameStartConstructor();
 
-        p1.chooseStarterCardFace(true);
-        p2.chooseStarterCardFace(true);
-        p3.chooseStarterCardFace(true);
-        p4.chooseStarterCardFace(true);
+        gc.chooseStarterCardFacing(p1, true);
+        gc.chooseStarterCardFacing(p2, true);
+        gc.chooseStarterCardFacing(p3, true);
+        gc.chooseStarterCardFacing(p4, true);
 
         p1.chooseColor(Color.RED);
         p2.chooseColor(Color.GREEN);
@@ -44,24 +41,28 @@ class GameControllerTest {
 
         g.postColorSelectionSetUp();
 
+        for(Player p:g.getPlayers())
+            p.setIsPlaying(true);
+
         gc.choosePersonalObjectiveCard(p1, 1);
         gc.choosePersonalObjectiveCard(p2, 1);
         gc.choosePersonalObjectiveCard(p3, 1);
         gc.choosePersonalObjectiveCard(p4, 1);
+
     }
 
     @Test
     void playerPlay() throws Exception {
         defineGame(g, p1, p2, p3, p4);
 
-        PlayableCard resourceCard = g.getCurrentPlayer().getHand().getCard(0);
-        int x = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).x();
-        int y = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).y();
+        PlayableCard card1 = g.getCurrentPlayer().getHand().getCard(0);
+        int x = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().x();
+        int y = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().y();
         gc.playerPlay(0, x, y, false);
 
-        PlayableCard card = g.getCurrentPlayer().getGameField().getCardFromCoordinate(x,y);
+        PlayableCard card2 = g.getCurrentPlayer().getGameField().getCardFromCoordinate(x,y);
 
-        assertEquals(resourceCard, card);
+        assertEquals(card1, card2);
     }
 
     @Test
@@ -70,8 +71,8 @@ class GameControllerTest {
 
         //------test draw gold card
         //PlayableCard resourceCard = g.getCurrentPlayer().getHand().getCard(0);
-        int x1 = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).x();
-        int y1 = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).y();
+        int x1 = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().x();
+        int y1 = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().y();
         gc.playerPlay(1, x1, y1, false);
 
         PlayableCard pc1 = g.getGoldDeck().getGround0(); //keep the current player cause it changes after draw
@@ -80,11 +81,11 @@ class GameControllerTest {
 
         gc.playerDraw("gold", 1);
 
-        assertEquals(pc1, p.getHand().getCard(2));
+        assertEquals(pc1, p.getHand().getCard(1));
 
         //------test draw resource card
-        int x2 = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).x();
-        int y2 = g.getCurrentPlayer().getGameField().getPossiblePlacement().get(0).y();
+        int x2 = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().x();
+        int y2 = g.getCurrentPlayer().getGameField().getPossiblePlacement().getFirst().y();
         gc.playerPlay(1, x2, y2, false);
 
         PlayableCard pc2 = g.getResourceDeck().getGround0();
@@ -93,7 +94,7 @@ class GameControllerTest {
 
         gc.playerDraw("resource", 1);
 
-        assertEquals(pc2, p.getHand().getCard(2));
+        assertTrue(p.getHand().getCardsInHand().contains(pc2));
     }
 
     @Test
@@ -109,10 +110,10 @@ class GameControllerTest {
         gc.chooseStarterCardFacing(p3, true);
         gc.chooseStarterCardFacing(p4, true);
 
-        assertEquals(true, p1.getGameField().getCardFromCoordinate(0, 0).getFace());
-        assertEquals(true, p2.getGameField().getCardFromCoordinate(0, 0).getFace());
-        assertEquals(true, p3.getGameField().getCardFromCoordinate(0, 0).getFace());
-        assertEquals(true, p4.getGameField().getCardFromCoordinate(0, 0).getFace());
+        assertTrue(p1.getGameField().getCardFromCoordinate(0, 0).getFace());
+        assertTrue(p2.getGameField().getCardFromCoordinate(0, 0).getFace());
+        assertTrue(p3.getGameField().getCardFromCoordinate(0, 0).getFace());
+        assertTrue(p4.getGameField().getCardFromCoordinate(0, 0).getFace());
     }
 
     @Test
@@ -138,9 +139,9 @@ class GameControllerTest {
     void choosePersonalObjectiveCard() throws Exception {
         defineGame(g, p1, p2, p3, p4);
 
-        assertEquals(p1.getPair().get(0), p1.getObjectiveCard());
-        assertEquals(p2.getPair().get(0), p2.getObjectiveCard());
-        assertEquals(p3.getPair().get(0), p3.getObjectiveCard());
-        assertEquals(p4.getPair().get(0), p4.getObjectiveCard());
+        assertEquals(p1.getPair().getFirst(), p1.getObjectiveCard());
+        assertEquals(p2.getPair().getFirst(), p2.getObjectiveCard());
+        assertEquals(p3.getPair().getFirst(), p3.getObjectiveCard());
+        assertEquals(p4.getPair().getFirst(), p4.getObjectiveCard());
     }
 }
